[gd_scene load_steps=62 format=3 uid="uid://bimqvxarfp4xy"]

[ext_resource type="Script" path="res://src/Scripts/Gordot.gd" id="1_3tkld"]
[ext_resource type="Texture2D" uid="uid://kysvg1i2dav" path="res://Sprites/knight.png" id="1_giw3n"]
[ext_resource type="AudioStream" uid="uid://ceml0dwvoiw5l" path="res://Assets/Sound/time_for_adventure.mp3" id="2_shjv8"]
[ext_resource type="PackedScene" uid="uid://cuqpfgivymptq" path="res://src/Scenes/HealthController.tscn" id="3_4p4dx"]
[ext_resource type="AudioStream" uid="uid://blarvx4pcodc8" path="res://Assets/Sound/coin_collected.mp3" id="4_cd4f6"]
[ext_resource type="PackedScene" uid="uid://ds45mv5gdn6hl" path="res://src/state_machine/gamer_state_machine.tscn" id="6_gnvny"]
[ext_resource type="AudioStream" uid="uid://bdifq76rbv2it" path="res://Assets/Sound/hit4.ogg" id="6_w3y13"]
[ext_resource type="Script" path="res://src/state_machine/Character/states/player_state_idle.gd" id="7_ommpl"]
[ext_resource type="AudioStream" uid="uid://crpx7u20xd7aj" path="res://Assets/Sound/game_over.ogg" id="7_vkg2i"]
[ext_resource type="Script" path="res://src/state_machine/Character/states/player_state_move.gd" id="8_3q1eh"]
[ext_resource type="Script" path="res://src/state_machine/Character/states/player_state_roll.gd" id="9_t28nu"]
[ext_resource type="Script" path="res://src/state_machine/Character/states/player_state_hit.gd" id="10_uc67k"]
[ext_resource type="Script" path="res://src/state_machine/Character/states/player_state_death.gd" id="11_46ngb"]
[ext_resource type="Script" path="res://src/state_machine/Character/states/player_state_ jump.gd" id="12_5de2d"]
[ext_resource type="PackedScene" uid="uid://b7douexw44wmt" path="res://src/Scenes/Menus/ui.tscn" id="14_xt140"]
[ext_resource type="Script" path="res://src/Scenes/Menus/ui.gd" id="15_t23uc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dihdx"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywqbq"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oy88"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrkg0"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6utkj"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsu2y"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sly08"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8k4hb"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_exfyq"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_atrpq"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_431al"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr21q"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgcly"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_am7gf"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl7y1"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8ndx"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4qa5"]
atlas = ExtResource("1_giw3n")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpvvu"]
atlas = ExtResource("1_giw3n")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uovp"]
atlas = ExtResource("1_giw3n")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dirde"]
atlas = ExtResource("1_giw3n")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeckv"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_73fcm"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_amgoj"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl8hg"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gbg6"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi51b"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvy7i"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_52t2v"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf7ab"]
atlas = ExtResource("1_giw3n")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd66r"]
atlas = ExtResource("1_giw3n")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mdq6"]
atlas = ExtResource("1_giw3n")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttng0"]
atlas = ExtResource("1_giw3n")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vccwk"]
atlas = ExtResource("1_giw3n")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8esa"]
atlas = ExtResource("1_giw3n")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4ckx"]
atlas = ExtResource("1_giw3n")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlntg"]
atlas = ExtResource("1_giw3n")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv0i6"]
atlas = ExtResource("1_giw3n")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj4sv"]
atlas = ExtResource("1_giw3n")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hdpg"]
atlas = ExtResource("1_giw3n")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox8pr"]
atlas = ExtResource("1_giw3n")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vulta"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dihdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywqbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oy88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrkg0")
}],
"loop": true,
"name": &"death",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6utkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsu2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sly08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k4hb")
}],
"loop": true,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exfyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atrpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_431al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr21q")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.9,
"texture": SubResource("AtlasTexture_vgcly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am7gf")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_dl7y1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8ndx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4qa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpvvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uovp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dirde")
}],
"loop": true,
"name": &"roll",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeckv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73fcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_amgoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl8hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gbg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi51b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvy7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52t2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf7ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd66r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mdq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttng0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vccwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8esa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4ckx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlntg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv0i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj4sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hdpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox8pr")
}],
"loop": true,
"name": &"run",
"speed": 26.0
}]

[sub_resource type="GDScript" id="GDScript_lmkjx"]
resource_name = "CameraEvents"
script/source = "extends Camera2D

var startZooming = false

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	if(startZooming && self.zoom <= Vector2(3,3)):
		var actualZoom = self.zoom
		self.zoom = Vector2(actualZoom.x + (0.4 * _delta), actualZoom.y + (0.4 * _delta))
	else:
		startZooming = false

func _on_timer_timeout():
	startZooming = true

func _shake(strength):
	for i in strength:
		var randomx = randf_range(1575,-1575)
		var randomy = randf_range(0.0855,-0.87)
		var tween_camera_shake = create_tween()
		tween_camera_shake.tween_property(self,\"offset\",Vector2(randomx,randomy),0.01)
		tween_camera_shake.tween_property(self,\"offset\",Vector2(randomx,randomy),0.01)
		await tween_camera_shake.finished
	offset = Vector2.ZERO
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1mewk"]
size = Vector2(13, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i5eg3"]
size = Vector2(11, 14)

[sub_resource type="GDScript" id="GDScript_ne7j2"]
resource_name = "MusicPlayer"
script/source = "extends AudioStreamPlayer2D

func _on_player_start():
	self.play()
"

[node name="Character" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 5
script = ExtResource("1_3tkld")
health_controller = ExtResource("3_4p4dx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4.76837e-07, 4.76837e-07)
sprite_frames = SubResource("SpriteFrames_vulta")
animation = &"hit"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = -590
limit_top = -330
limit_bottom = 40
position_smoothing_enabled = true
script = SubResource("GDScript_lmkjx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 4)
shape = SubResource("RectangleShape2D_1mewk")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.387
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 2)
disable_mode = 1
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_i5eg3")

[node name="CoinCollected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_cd4f6")

[node name="IntroMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_shjv8")
volume_db = -39.381
script = SubResource("GDScript_ne7j2")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_w3y13")
pitch_scale = 0.79
attenuation = 3.03143
panning_strength = 1.61

[node name="GameOverSounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_vkg2i")

[node name="HealthController" parent="." instance=ExtResource("3_4p4dx")]
unique_name_in_owner = true

[node name="CharacterStateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("6_gnvny")]
initial_state = NodePath("CharacterStateIdle")

[node name="CharacterStateIdle" type="Node" parent="CharacterStateMachine"]
script = ExtResource("7_ommpl")

[node name="CharacterStateMove" type="Node" parent="CharacterStateMachine"]
script = ExtResource("8_3q1eh")

[node name="CharacterStateRoll" type="Node" parent="CharacterStateMachine"]
script = ExtResource("9_t28nu")

[node name="CharacterStateHit" type="Node" parent="CharacterStateMachine"]
script = ExtResource("10_uc67k")

[node name="CharacterStateDeath" type="Node" parent="CharacterStateMachine"]
script = ExtResource("11_46ngb")

[node name="Timer" type="Timer" parent="CharacterStateMachine/CharacterStateDeath"]

[node name="CharacterStateJump" type="Node" parent="CharacterStateMachine"]
script = ExtResource("12_5de2d")

[node name="UI" parent="." instance=ExtResource("14_xt140")]
script = ExtResource("15_t23uc")

[connection signal="coin_collected" from="." to="UI" method="_on_character_coin_collected"]
[connection signal="health_changed" from="." to="UI" method="_on_character_health_changed"]
[connection signal="im_death" from="." to="CharacterStateMachine" method="_on_character_im_death"]
[connection signal="start" from="." to="IntroMusic" method="_on_player_start"]
[connection signal="timeout" from="Timer" to="Camera2D" method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
